--- a/css/small_screen.css
+++ b/css/small_screen.css
@@ -6,6 +6,9 @@ MEDIUM SIZE SCREEN
 	.card {
 		border: solid 3.0rem #fff;
 	}	
+	.inside-card{
+		/*margin-top: 7.75rem;*/
+	}
 	.bottom-nav-bar {	
     	margin-top: -4.7rem;
 	}
@@ -21,6 +24,12 @@ MEDIUM SIZE SCREEN
 /* Border */
 	.card {
 		border: solid 1.6rem #fff;
+		height: 33.25rem;
+		padding:0;
+		margin-top: 1rem;
+	}
+	.inside-card {
+		margin-top: 4.75rem;
 	}
 /*
 Font 
@@ -42,11 +51,59 @@ Font
 	 */
 	.direct-contact {
 		display: inherit;
+		margin-top: 1.5rem;
+		margin-bottom: 1rem;
+
 	}
 	a.direct-contact  img{
 		min-height: 0.5rem;
 		min-width: 0.5rem;
-		margin-right: 0.25rem
+		margin-right: 0.25rem;
 	} 
 
+}
+
+/* 
+Extra small 
+ */
+
+@media screen and (max-width: 30rem) {
+
+	.row:nth-child(3) {
+		line-height: 17px;
+	}
+	.deltav-v{
+		font-size: 1.875rem;
+	}
+	.bottom-nav-bar:nth-child(1){
+		/*margin-left: 1.09375rem;*/
+		/*margin-left: 10px;*/
+		
+	}
+	.front-end {
+		/*width: 8rem;*/
+		/*clear: left;*/
+		/*width: 123px;		*/
+	}
+	.ux-dev {
+		/*width: 10.875rem;*/
+		padding: 0;
+		/*width: 125px;*/
+		/*margin-left: 31px;*/
+
+	}
+}
+/*smallest*/
+@media screen and (max-width: 20rem) {
+	.ux-dev {
+    width: 106px;
+    margin-left: 2rem;
+	}
+	.front-end h4 {
+		width: 126px;
+		margin-left: 1.5rem;
+	}
+	.bottom-nav-bar {
+		width: 301px;
+	}
 }
